# RAUNet_Implementation

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yaml  environment_ready.yaml  helper_loss_functions.py  inżynierka.ipynb  models_to_test.py  models_to_test_modyfikacje.py  pyproject.toml
Helper_functions/: helper_metric_functions.py  load_and_visualize_data.py  models.py
Model/Attention_Residual_Unet_29_excel/20221218-171814/train/: events.out.tfevents.1671380296.LAPTOP-8BFGSH60.24036.0.v2
Model/Attention_Residual_Unet_29_excel/20221218-172841/train/: events.out.tfevents.1671380922.LAPTOP-8BFGSH60.22048.0.v2
Model/Attention_Residual_Unet_29_excel/20221218-191700/train/: events.out.tfevents.1671387421.LAPTOP-8BFGSH60.9284.0.v2
Model/Attention_Residual_Unet_29_excel/20221218-191700/validation/: events.out.tfevents.1671387446.LAPTOP-8BFGSH60.9284.1.v2
Model/Attention_Residual_Unet_29_excel/20221218-193242/train/: events.out.tfevents.1671388363.LAPTOP-8BFGSH60.21508.0.v2
model/Attention_Residual_Unet_29_excel/20221218-171814/validation/: events.out.tfevents.1671380323.LAPTOP-8BFGSH60.24036.1.v2
model/Attention_Residual_Unet_29_excel/20221218-172841/validation/: events.out.tfevents.1671380946.LAPTOP-8BFGSH60.22048.1.v2
model/Attention_Residual_Unet_29_excel/20221218-193242/validation/: events.out.tfevents.1671388387.LAPTOP-8BFGSH60.21508.1.v2
src/: __init__.py
src/raunet/: config.py
src/raunet/Helper_functions/: models.py
src/raunet/models/: attention_unet.py  blocks.py  raunet.py  unet.py  utils.py
src/raunet/tools/: visualizations.py
src/raunet/utils/: helper_loss_functions.py  helper_metric_functions.py
